--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
         </div>
         <button id="generate-btn">Generate Numbers</button>
     </div>
+
+    <div class="form-container">
+        <h2>Partnership Inquiry</h2>
+        <form action="https://formspree.io/f/xgolrvqe" method="POST">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required placeholder="Your Name">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required placeholder="your@email.com">
+            </div>
+            <div class="form-group">
+                <label for="company">Company</label>
+                <input type="text" id="company" name="company" placeholder="Company Name">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required placeholder="How can we work together?"></textarea>
+            </div>
+            <button type="submit" id="submit-btn">Send Message</button>
+        </form>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
