docs: improve site quality for adsense approval

--- a/index.html
+++ b/index.html
@@ -20,9 +20,31 @@
             <div class="number"></div>
             <div class="number"></div>
             <div class="number"></div>
-        </div> 
+        </div>
         <button id="generate-btn">Generate Numbers</button>
     </div>
+
+    <section class="info-section">
+        <h2>About Lotto 6/45</h2>
+        <p>Lotto 6/45 is a popular lottery game where participants choose six numbers from a pool of 1 to 45. Our generator helps you pick numbers using a fair and random algorithm, ensuring each selection is unique.</p>
+        
+        <h3>How to Play</h3>
+        <p>To play, simply select six numbers. If all six match the official draw, you win the jackpot! Even if you match fewer numbers, there are various prize tiers available.</p>
+    </section>
+
+    <section class="info-section">
+        <h2>Winning Strategies & Tips</h2>
+        <div class="tips-grid">
+            <div class="tip-card">
+                <h3>Odd/Even Balance</h3>
+                <p>A common strategy is to balance odd and even numbers. Many winning draws have a 3/3 or 2/4 split between odd and even digits.</p>
+            </div>
+            <div class="tip-card">
+                <h3>High/Low Spread</h3>
+                <p>Try to spread your numbers across the low (1-22) and high (23-45) ranges for a more statistically common distribution.</p>
+            </div>
+        </div>
+    </section>
 
     <div class="form-container">
         <h2>Partnership Inquiry</h2>
